Add reports for duplicated location values
