# server/overlay/swagger_server/controllers/report_controller.py
@@ -9,7 +9,7 @@ from backbone_server.controllers.report_controller import ReportController
 
 report_controller = ReportController()
 
-def missing_locations(include_country=False, user = None, token_info = None):  # noqa: E501
+def missing_locations(include_country=False, user=None, token_info=None):  # noqa: E501
     """fetches studies with sampling events with missing locations
 
      # noqa: E501
@@ -23,7 +23,7 @@ def missing_locations(include_country=False, user = None, token_info = None):  #
                                                report_controller.token_info(token_info))
 
 
-def missing_taxon(user = None, token_info = None):  # noqa: E501
+def missing_taxon(user=None, token_info=None):  # noqa: E501
     """fetches studies with uncurated taxon
 
      # noqa: E501
@@ -35,7 +35,31 @@ def missing_taxon(user = None, token_info = None):  # noqa: E501
                                                report_controller.token_info(token_info))
 
 
-def uncurated_locations(user = None, token_info = None):  # noqa: E501
+def multiple_location_gps(user=None, token_info=None):  # noqa: E501
+    """fetches studies with multiple locations with the same GPS
+
+     # noqa: E501
+
+
+    :rtype: Studies
+    """
+    return report_controller.multiple_location_gps(user,
+                                               report_controller.token_info(token_info))
+
+
+def multiple_location_names(user=None, token_info=None):  # noqa: E501
+    """fetches studies with multiple locations with the same name
+
+     # noqa: E501
+
+
+    :rtype: Studies
+    """
+    return report_controller.multiple_location_names(user,
+                                               report_controller.token_info(token_info))
+
+
+def uncurated_locations(user=None, token_info=None):  # noqa: E501
     """fetches studies with uncurated locations
 
      # noqa: E501
